<resources>
    <string name="app_name">Agrix</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_notnow">Not Now</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search...</string>
    <string name="lorem_ipsup">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam orci massa, porta sit amet commodo a, euismod eu sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum sed felis at libero aliquam consequat. Aenean quis semper sem, eu malesuada odio. Sed elementum diam ut euismod sagittis. Duis id mi tincidunt, pulvinar augue sed, semper mauris. Duis tristique euismod tincidunt. Curabitur eros ex, sagittis at sodales et, elementum sed erat. Pellentesque ut leo posuere, egestas velit sed, dignissim purus. Aliquam eget est dui. Maecenas quis suscipit eros. Aenean pulvinar elit lacus, a dictum lacus dapibus quis. Duis leo erat, </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
</resources>