<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="#ECEFF1">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/fieldsContainer"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#008975">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailField"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:background="@android:color/transparent"
                android:textColor="#263238"
                android:drawableRight="@drawable/ic_mail_outline_green_50_24dp"
                android:paddingRight="10dp"
                android:drawableTint="#008975"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#008975"
            android:layout_marginTop="15dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#008975"
            android:textColorHint="#008975">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passField"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:background="@android:color/transparent"
                android:textColor="#263238"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#008975"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldsContainer"
        android:background="@drawable/background_login"
        android:text="@string/btn_login"
        android:textColor="#008975"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:background="@drawable/background_signup"
        android:text="@string/btn_sign_up"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/notNow"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:padding="4dp"
        android:layout_below="@id/signup_btn"
        android:layout_alignRight="@id/signup_btn"
        android:text="@string/text_notnow"
        android:textAllCaps="true"
        android:textColor="#008975"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPass"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:padding="4dp"
        android:layout_below="@id/signup_btn"
        android:layout_alignRight="@id/signup_btn"
        android:text="forgot password"
        android:textAllCaps="true"
        android:textColor="#008975"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>



</RelativeLayout>
